AM_CPPFLAGS = \
    -I$(top_srcdir)/include \
    ${LIBXML_CFLAGS}
    
noinst_LTLIBRARIES = libfuppes_contentdatabase.la

libfuppes_contentdatabase_la_SOURCES = \
	ContentDatabase.h \
	ContentDatabase.cpp \
	FileDetails.h \
	FileDetails.cpp \
	ScanDirectoryThread.h \
	ScanDirectoryThread.cpp \
	UpdateThread.h \
	UpdateThread.cpp \
	RemoveMissingThread.h \
	RemoveMissingThread.cpp \
	Configuration.h \
	SharedObject.h
