AM_CPPFLAGS = \
    -I$(top_srcdir)/include \
    ${LIBXML_CFLAGS}

noinst_LTLIBRARIES = libfuppes_database.la

libfuppes_database_la_SOURCES = \
	Connection.h \
    Connection.cpp \
	Item.h \
    Item.cpp \
    ItemDetails.h \
    ItemDetails.cpp \
    ItemSource.h \
    ItemSource.cpp \
	ObjectManager.h \
    ObjectManager.cpp \
	PreparedStatement.h \
    PreparedStatement.cpp \
	QueryBuilder.h \
    QueryBuilder.cpp \
	QueryResult.h \
    QueryResult.cpp \
	SearchCriteria.h \
    SearchCriteria.cpp \
	SortCriteria.h \
    SortCriteria.cpp \
	TableManager.h \
    TableManager.cpp

