AM_CPPFLAGS = \
    -I$(top_srcdir)/include

noinst_LTLIBRARIES = libfuppes_http.la

libfuppes_http_la_SOURCES = \
    HttpServer.h \
    HttpServer.cpp \
    HttpSession.h \
    HttpSession.cpp \
    Client.h \
    Client.cpp \
    Message.h \
    Message.cpp \
    Request.h \
    Request.cpp \
    Response.h \
    Response.cpp \
    ResponseFile.h \
    ResponseFile.cpp \
    ResponseCallback.h \
    ResponseCallback.cpp \
    HttpHeader.h \
    HttpHeader.cpp \
    StatusCode.h

