AM_CPPFLAGS = \
    -I$(top_srcdir)/include

noinst_LTLIBRARIES = libfuppes_plugin.la

libfuppes_plugin_la_SOURCES = \
	Manager.h \
	Manager.cpp \
	Plugin.h \
	Plugin.cpp \
	Database.h \
	Database.cpp \
	ItemSource.h \
	ItemSource.cpp \
	Metadata.h \
	Metadata.cpp \
	Decoder.h \
	Decoder.cpp \
	Encoder.h \
	Encoder.cpp \
	Transcoder.h \
	Transcoder.cpp \
	AbstractDecoder.h \
	AbstractEncoder.h \
	AbstractTranscoder.h
