AM_CPPFLAGS = \
    -I$(top_srcdir)/include \
    ${LIBXML_CFLAGS}

noinst_LTLIBRARIES = libfuppes_presentation.la

libfuppes_presentation_la_SOURCES = \
    PresentationHandler.h \
    PresentationHandler.cpp \
    PresentationPage.h \
    PresentationPage.cpp \
    PageStart.h \
    PageStart.cpp \
    PageDatabase.h \
    PageDatabase.cpp 
