AM_CPPFLAGS = \
    -I$(top_srcdir)/include

noinst_LTLIBRARIES = libfuppes_thread.la

libfuppes_thread_la_SOURCES = \
    Thread.h \
    Thread.cpp \
    Mutex.h \
    Mutex.cpp \
    ThreadPool.h \
    ThreadPool.cpp \
    EventLoop.h \
    EventLoopThread.h \
    EventLoopThread.cpp \
    BaseWatcher.h \
    IoWatcher.h \
    IoEventReceiverInterface.h \
    IdleWatcher.h \
    IdleEventReceiverInterface.h \
    AsyncWatcher.h \
    AsyncEventReceiverInterface.h \
    Process.cpp \
    Process.h

