AM_CPPFLAGS = \
    -I$(top_srcdir)/include

noinst_LTLIBRARIES = libfuppes_transcoding.la

libfuppes_transcoding_la_SOURCES = \
    Item.h \
    Item.cpp \
    Cache.h \
    Cache.cpp \
    CacheItem.h \
    CacheItem.cpp \
    Configuration.h \
    Transcoder.h \
    Transcoder.cpp \
    TranscoderExternalProcess.h \
    TranscoderExternalProcess.cpp
